Bug 822025 - nsCSSFrameConstructor.cpp:9752:7: warning: variable 'wrapperType' is used uninitialized whenever switch default is taken. r=bz.